trunk/org.phpaspect.apdt.core/src/org/phpaspect/apdt/internal/core/parser/antlr/PHPAspectParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 PHPAspectParser.g 2009-05-20 15:40:53

package org.phpaspect.apdt.internal.core.parser.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class PHPAspectParser extends APDTParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "INTLIT", "CHARLIT", "STRING_LITERAL", "WS", "DOT", "LPARENTHESE", "RPARENTHESE", "AT", "CALL", "NEW", "PAAMAYIM_NEKUDOTAYIM", "OBJECT_OPERATOR", "AND", "OR", "NOT", "PLUS", "BEFORE", "AROUND", "AFTER", "MIXIN", "LABEL", "ANNOTATION", "PARENTHESE"
    };
    public static final int LPARENTHESE=10;
    public static final int WS=8;
    public static final int NEW=14;
    public static final int PAAMAYIM_NEKUDOTAYIM=15;
    public static final int LABEL=25;
    public static final int OBJECT_OPERATOR=16;
    public static final int MIXIN=24;
    public static final int OR=18;
    public static final int AFTER=23;
    public static final int DOT=9;
    public static final int AND=17;
    public static final int INTLIT=5;
    public static final int EOF=-1;
    public static final int STRING_LITERAL=7;
    public static final int CHARLIT=6;
    public static final int CALL=13;
    public static final int ANNOTATION=26;
    public static final int DIGIT=4;
    public static final int PLUS=20;
    public static final int BEFORE=21;
    public static final int RPARENTHESE=11;
    public static final int PARENTHESE=27;
    public static final int NOT=19;
    public static final int AROUND=22;
    public static final int AT=12;

    // delegates
    // delegators


        public PHPAspectParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PHPAspectParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PHPAspectParser.tokenNames; }
    public String getGrammarFileName() { return "PHPAspectParser.g"; }


    public static class annotation_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "annotation"
    // PHPAspectParser.g:22:1: annotation : AT advice LPARENTHESE pointcut RPARENTHESE -> ^( ANNOTATION advice pointcut ) ;
    public final PHPAspectParser.annotation_return annotation() throws RecognitionException {
        PHPAspectParser.annotation_return retval = new PHPAspectParser.annotation_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken AT1=null;
        CommonToken LPARENTHESE3=null;
        CommonToken RPARENTHESE5=null;
        PHPAspectParser.advice_return advice2 = null;

        PHPAspectParser.pointcut_return pointcut4 = null;


        PHPAspectCommonTree AT1_tree=null;
        PHPAspectCommonTree LPARENTHESE3_tree=null;
        PHPAspectCommonTree RPARENTHESE5_tree=null;
        RewriteRuleTokenStream stream_LPARENTHESE=new RewriteRuleTokenStream(adaptor,"token LPARENTHESE");
        RewriteRuleTokenStream stream_RPARENTHESE=new RewriteRuleTokenStream(adaptor,"token RPARENTHESE");
        RewriteRuleTokenStream stream_AT=new RewriteRuleTokenStream(adaptor,"token AT");
        RewriteRuleSubtreeStream stream_pointcut=new RewriteRuleSubtreeStream(adaptor,"rule pointcut");
        RewriteRuleSubtreeStream stream_advice=new RewriteRuleSubtreeStream(adaptor,"rule advice");
        try {
            // PHPAspectParser.g:23:1: ( AT advice LPARENTHESE pointcut RPARENTHESE -> ^( ANNOTATION advice pointcut ) )
            // PHPAspectParser.g:23:3: AT advice LPARENTHESE pointcut RPARENTHESE
            {
            AT1=(CommonToken)match(input,AT,FOLLOW_AT_in_annotation65);  
            stream_AT.add(AT1);

            pushFollow(FOLLOW_advice_in_annotation67);
            advice2=advice();

            state._fsp--;

            stream_advice.add(advice2.getTree());
            LPARENTHESE3=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_annotation69);  
            stream_LPARENTHESE.add(LPARENTHESE3);

            pushFollow(FOLLOW_pointcut_in_annotation71);
            pointcut4=pointcut();

            state._fsp--;

            stream_pointcut.add(pointcut4.getTree());
            RPARENTHESE5=(CommonToken)match(input,RPARENTHESE,FOLLOW_RPARENTHESE_in_annotation73);  
            stream_RPARENTHESE.add(RPARENTHESE5);



            // AST REWRITE
            // elements: advice, pointcut
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PHPAspectCommonTree)adaptor.nil();
            // 24:1: -> ^( ANNOTATION advice pointcut )
            {
                // PHPAspectParser.g:24:4: ^( ANNOTATION advice pointcut )
                {
                PHPAspectCommonTree root_1 = (PHPAspectCommonTree)adaptor.nil();
                root_1 = (PHPAspectCommonTree)adaptor.becomeRoot((PHPAspectCommonTree)adaptor.create(ANNOTATION, "ANNOTATION"), root_1);

                adaptor.addChild(root_1, stream_advice.nextTree());
                adaptor.addChild(root_1, stream_pointcut.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "annotation"

    public static class advice_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "advice"
    // PHPAspectParser.g:27:1: advice : ( BEFORE | AROUND | AFTER );
    public final PHPAspectParser.advice_return advice() throws RecognitionException {
        PHPAspectParser.advice_return retval = new PHPAspectParser.advice_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken set6=null;

        PHPAspectCommonTree set6_tree=null;

        try {
            // PHPAspectParser.g:28:1: ( BEFORE | AROUND | AFTER )
            // PHPAspectParser.g:
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            set6=(CommonToken)input.LT(1);
            if ( (input.LA(1)>=BEFORE && input.LA(1)<=AFTER) ) {
                input.consume();
                adaptor.addChild(root_0, (PHPAspectCommonTree)adaptor.create(set6));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "advice"

    public static class pointcut_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pointcut"
    // PHPAspectParser.g:34:1: pointcut : or_joinpoint ;
    public final PHPAspectParser.pointcut_return pointcut() throws RecognitionException {
        PHPAspectParser.pointcut_return retval = new PHPAspectParser.pointcut_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        PHPAspectParser.or_joinpoint_return or_joinpoint7 = null;



        try {
            // PHPAspectParser.g:35:1: ( or_joinpoint )
            // PHPAspectParser.g:35:3: or_joinpoint
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            pushFollow(FOLLOW_or_joinpoint_in_pointcut110);
            or_joinpoint7=or_joinpoint();

            state._fsp--;

            adaptor.addChild(root_0, or_joinpoint7.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pointcut"

    public static class or_joinpoint_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "or_joinpoint"
    // PHPAspectParser.g:38:1: or_joinpoint : pt1= and_joinpoint ( OR pt2= and_joinpoint )* ;
    public final PHPAspectParser.or_joinpoint_return or_joinpoint() throws RecognitionException {
        PHPAspectParser.or_joinpoint_return retval = new PHPAspectParser.or_joinpoint_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken OR8=null;
        PHPAspectParser.and_joinpoint_return pt1 = null;

        PHPAspectParser.and_joinpoint_return pt2 = null;


        PHPAspectCommonTree OR8_tree=null;

        try {
            // PHPAspectParser.g:39:1: (pt1= and_joinpoint ( OR pt2= and_joinpoint )* )
            // PHPAspectParser.g:39:3: pt1= and_joinpoint ( OR pt2= and_joinpoint )*
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            pushFollow(FOLLOW_and_joinpoint_in_or_joinpoint121);
            pt1=and_joinpoint();

            state._fsp--;

            adaptor.addChild(root_0, pt1.getTree());
            // PHPAspectParser.g:39:21: ( OR pt2= and_joinpoint )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // PHPAspectParser.g:39:22: OR pt2= and_joinpoint
            	    {
            	    OR8=(CommonToken)match(input,OR,FOLLOW_OR_in_or_joinpoint124); 
            	    OR8_tree = (PHPAspectCommonTree)adaptor.create(OR8);
            	    root_0 = (PHPAspectCommonTree)adaptor.becomeRoot(OR8_tree, root_0);

            	    pushFollow(FOLLOW_and_joinpoint_in_or_joinpoint129);
            	    pt2=and_joinpoint();

            	    state._fsp--;

            	    adaptor.addChild(root_0, pt2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "or_joinpoint"

    public static class and_joinpoint_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "and_joinpoint"
    // PHPAspectParser.g:42:1: and_joinpoint : pt1= not_joinpoint ( AND pt2= not_joinpoint )* ;
    public final PHPAspectParser.and_joinpoint_return and_joinpoint() throws RecognitionException {
        PHPAspectParser.and_joinpoint_return retval = new PHPAspectParser.and_joinpoint_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken AND9=null;
        PHPAspectParser.not_joinpoint_return pt1 = null;

        PHPAspectParser.not_joinpoint_return pt2 = null;


        PHPAspectCommonTree AND9_tree=null;

        try {
            // PHPAspectParser.g:43:1: (pt1= not_joinpoint ( AND pt2= not_joinpoint )* )
            // PHPAspectParser.g:43:3: pt1= not_joinpoint ( AND pt2= not_joinpoint )*
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            pushFollow(FOLLOW_not_joinpoint_in_and_joinpoint142);
            pt1=not_joinpoint();

            state._fsp--;

            adaptor.addChild(root_0, pt1.getTree());
            // PHPAspectParser.g:43:21: ( AND pt2= not_joinpoint )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // PHPAspectParser.g:43:22: AND pt2= not_joinpoint
            	    {
            	    AND9=(CommonToken)match(input,AND,FOLLOW_AND_in_and_joinpoint145); 
            	    AND9_tree = (PHPAspectCommonTree)adaptor.create(AND9);
            	    root_0 = (PHPAspectCommonTree)adaptor.becomeRoot(AND9_tree, root_0);

            	    pushFollow(FOLLOW_not_joinpoint_in_and_joinpoint150);
            	    pt2=not_joinpoint();

            	    state._fsp--;

            	    adaptor.addChild(root_0, pt2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "and_joinpoint"

    public static class not_joinpoint_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "not_joinpoint"
    // PHPAspectParser.g:46:1: not_joinpoint : ( NOT )? joinpoint ;
    public final PHPAspectParser.not_joinpoint_return not_joinpoint() throws RecognitionException {
        PHPAspectParser.not_joinpoint_return retval = new PHPAspectParser.not_joinpoint_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken NOT10=null;
        PHPAspectParser.joinpoint_return joinpoint11 = null;


        PHPAspectCommonTree NOT10_tree=null;

        try {
            // PHPAspectParser.g:47:1: ( ( NOT )? joinpoint )
            // PHPAspectParser.g:47:3: ( NOT )? joinpoint
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            // PHPAspectParser.g:47:3: ( NOT )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==NOT) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // PHPAspectParser.g:47:4: NOT
                    {
                    NOT10=(CommonToken)match(input,NOT,FOLLOW_NOT_in_not_joinpoint162); 
                    NOT10_tree = (PHPAspectCommonTree)adaptor.create(NOT10);
                    root_0 = (PHPAspectCommonTree)adaptor.becomeRoot(NOT10_tree, root_0);


                    }
                    break;

            }

            pushFollow(FOLLOW_joinpoint_in_not_joinpoint167);
            joinpoint11=joinpoint();

            state._fsp--;

            adaptor.addChild(root_0, joinpoint11.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "not_joinpoint"

    public static class joinpoint_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "joinpoint"
    // PHPAspectParser.g:51:1: joinpoint : ( CALL LPARENTHESE type= LABEL resolution method= LABEL LPARENTHESE -> ^( CALL $type resolution $method) | NEW LPARENTHESE type= LABEL LPARENTHESE -> ^( NEW $type) | LPARENTHESE or_joinpoint RPARENTHESE -> ^( PARENTHESE or_joinpoint ) | MIXIN LPARENTHESE type= LABEL LPARENTHESE -> ^( MIXIN type ) );
    public final PHPAspectParser.joinpoint_return joinpoint() throws RecognitionException {
        PHPAspectParser.joinpoint_return retval = new PHPAspectParser.joinpoint_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken type=null;
        CommonToken method=null;
        CommonToken CALL12=null;
        CommonToken LPARENTHESE13=null;
        CommonToken LPARENTHESE15=null;
        CommonToken NEW16=null;
        CommonToken LPARENTHESE17=null;
        CommonToken LPARENTHESE18=null;
        CommonToken LPARENTHESE19=null;
        CommonToken RPARENTHESE21=null;
        CommonToken MIXIN22=null;
        CommonToken LPARENTHESE23=null;
        CommonToken LPARENTHESE24=null;
        PHPAspectParser.resolution_return resolution14 = null;

        PHPAspectParser.or_joinpoint_return or_joinpoint20 = null;


        PHPAspectCommonTree type_tree=null;
        PHPAspectCommonTree method_tree=null;
        PHPAspectCommonTree CALL12_tree=null;
        PHPAspectCommonTree LPARENTHESE13_tree=null;
        PHPAspectCommonTree LPARENTHESE15_tree=null;
        PHPAspectCommonTree NEW16_tree=null;
        PHPAspectCommonTree LPARENTHESE17_tree=null;
        PHPAspectCommonTree LPARENTHESE18_tree=null;
        PHPAspectCommonTree LPARENTHESE19_tree=null;
        PHPAspectCommonTree RPARENTHESE21_tree=null;
        PHPAspectCommonTree MIXIN22_tree=null;
        PHPAspectCommonTree LPARENTHESE23_tree=null;
        PHPAspectCommonTree LPARENTHESE24_tree=null;
        RewriteRuleTokenStream stream_LPARENTHESE=new RewriteRuleTokenStream(adaptor,"token LPARENTHESE");
        RewriteRuleTokenStream stream_LABEL=new RewriteRuleTokenStream(adaptor,"token LABEL");
        RewriteRuleTokenStream stream_RPARENTHESE=new RewriteRuleTokenStream(adaptor,"token RPARENTHESE");
        RewriteRuleTokenStream stream_MIXIN=new RewriteRuleTokenStream(adaptor,"token MIXIN");
        RewriteRuleTokenStream stream_NEW=new RewriteRuleTokenStream(adaptor,"token NEW");
        RewriteRuleTokenStream stream_CALL=new RewriteRuleTokenStream(adaptor,"token CALL");
        RewriteRuleSubtreeStream stream_or_joinpoint=new RewriteRuleSubtreeStream(adaptor,"rule or_joinpoint");
        RewriteRuleSubtreeStream stream_resolution=new RewriteRuleSubtreeStream(adaptor,"rule resolution");
        try {
            // PHPAspectParser.g:52:1: ( CALL LPARENTHESE type= LABEL resolution method= LABEL LPARENTHESE -> ^( CALL $type resolution $method) | NEW LPARENTHESE type= LABEL LPARENTHESE -> ^( NEW $type) | LPARENTHESE or_joinpoint RPARENTHESE -> ^( PARENTHESE or_joinpoint ) | MIXIN LPARENTHESE type= LABEL LPARENTHESE -> ^( MIXIN type ) )
            int alt4=4;
            switch ( input.LA(1) ) {
            case CALL:
                {
                alt4=1;
                }
                break;
            case NEW:
                {
                alt4=2;
                }
                break;
            case LPARENTHESE:
                {
                alt4=3;
                }
                break;
            case MIXIN:
                {
                alt4=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // PHPAspectParser.g:52:3: CALL LPARENTHESE type= LABEL resolution method= LABEL LPARENTHESE
                    {
                    CALL12=(CommonToken)match(input,CALL,FOLLOW_CALL_in_joinpoint177);  
                    stream_CALL.add(CALL12);

                    LPARENTHESE13=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint179);  
                    stream_LPARENTHESE.add(LPARENTHESE13);

                    type=(CommonToken)match(input,LABEL,FOLLOW_LABEL_in_joinpoint183);  
                    stream_LABEL.add(type);

                    pushFollow(FOLLOW_resolution_in_joinpoint185);
                    resolution14=resolution();

                    state._fsp--;

                    stream_resolution.add(resolution14.getTree());
                    method=(CommonToken)match(input,LABEL,FOLLOW_LABEL_in_joinpoint189);  
                    stream_LABEL.add(method);

                    LPARENTHESE15=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint191);  
                    stream_LPARENTHESE.add(LPARENTHESE15);



                    // AST REWRITE
                    // elements: resolution, type, CALL, method
                    // token labels: type, method
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
                    RewriteRuleTokenStream stream_method=new RewriteRuleTokenStream(adaptor,"token method",method);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PHPAspectCommonTree)adaptor.nil();
                    // 53:1: -> ^( CALL $type resolution $method)
                    {
                        // PHPAspectParser.g:53:4: ^( CALL $type resolution $method)
                        {
                        PHPAspectCommonTree root_1 = (PHPAspectCommonTree)adaptor.nil();
                        root_1 = (PHPAspectCommonTree)adaptor.becomeRoot(stream_CALL.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_type.nextNode());
                        adaptor.addChild(root_1, stream_resolution.nextTree());
                        adaptor.addChild(root_1, stream_method.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // PHPAspectParser.g:54:3: NEW LPARENTHESE type= LABEL LPARENTHESE
                    {
                    NEW16=(CommonToken)match(input,NEW,FOLLOW_NEW_in_joinpoint209);  
                    stream_NEW.add(NEW16);

                    LPARENTHESE17=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint211);  
                    stream_LPARENTHESE.add(LPARENTHESE17);

                    type=(CommonToken)match(input,LABEL,FOLLOW_LABEL_in_joinpoint215);  
                    stream_LABEL.add(type);

                    LPARENTHESE18=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint217);  
                    stream_LPARENTHESE.add(LPARENTHESE18);



                    // AST REWRITE
                    // elements: NEW, type
                    // token labels: type
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PHPAspectCommonTree)adaptor.nil();
                    // 55:1: -> ^( NEW $type)
                    {
                        // PHPAspectParser.g:55:4: ^( NEW $type)
                        {
                        PHPAspectCommonTree root_1 = (PHPAspectCommonTree)adaptor.nil();
                        root_1 = (PHPAspectCommonTree)adaptor.becomeRoot(stream_NEW.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_type.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // PHPAspectParser.g:56:3: LPARENTHESE or_joinpoint RPARENTHESE
                    {
                    LPARENTHESE19=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint230);  
                    stream_LPARENTHESE.add(LPARENTHESE19);

                    pushFollow(FOLLOW_or_joinpoint_in_joinpoint232);
                    or_joinpoint20=or_joinpoint();

                    state._fsp--;

                    stream_or_joinpoint.add(or_joinpoint20.getTree());
                    RPARENTHESE21=(CommonToken)match(input,RPARENTHESE,FOLLOW_RPARENTHESE_in_joinpoint234);  
                    stream_RPARENTHESE.add(RPARENTHESE21);



                    // AST REWRITE
                    // elements: or_joinpoint
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PHPAspectCommonTree)adaptor.nil();
                    // 57:1: -> ^( PARENTHESE or_joinpoint )
                    {
                        // PHPAspectParser.g:57:4: ^( PARENTHESE or_joinpoint )
                        {
                        PHPAspectCommonTree root_1 = (PHPAspectCommonTree)adaptor.nil();
                        root_1 = (PHPAspectCommonTree)adaptor.becomeRoot((PHPAspectCommonTree)adaptor.create(PARENTHESE, "PARENTHESE"), root_1);

                        adaptor.addChild(root_1, stream_or_joinpoint.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // PHPAspectParser.g:58:3: MIXIN LPARENTHESE type= LABEL LPARENTHESE
                    {
                    MIXIN22=(CommonToken)match(input,MIXIN,FOLLOW_MIXIN_in_joinpoint246);  
                    stream_MIXIN.add(MIXIN22);

                    LPARENTHESE23=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint248);  
                    stream_LPARENTHESE.add(LPARENTHESE23);

                    type=(CommonToken)match(input,LABEL,FOLLOW_LABEL_in_joinpoint252);  
                    stream_LABEL.add(type);

                    LPARENTHESE24=(CommonToken)match(input,LPARENTHESE,FOLLOW_LPARENTHESE_in_joinpoint254);  
                    stream_LPARENTHESE.add(LPARENTHESE24);



                    // AST REWRITE
                    // elements: MIXIN, type
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PHPAspectCommonTree)adaptor.nil();
                    // 59:1: -> ^( MIXIN type )
                    {
                        // PHPAspectParser.g:59:4: ^( MIXIN type )
                        {
                        PHPAspectCommonTree root_1 = (PHPAspectCommonTree)adaptor.nil();
                        root_1 = (PHPAspectCommonTree)adaptor.becomeRoot(stream_MIXIN.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (PHPAspectCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PHPAspectCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "joinpoint"

    public static class resolution_return extends ParserRuleReturnScope {
        PHPAspectCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "resolution"
    // PHPAspectParser.g:62:1: resolution : ( PAAMAYIM_NEKUDOTAYIM | OBJECT_OPERATOR );
    public final PHPAspectParser.resolution_return resolution() throws RecognitionException {
        PHPAspectParser.resolution_return retval = new PHPAspectParser.resolution_return();
        retval.start = input.LT(1);

        PHPAspectCommonTree root_0 = null;

        CommonToken set25=null;

        PHPAspectCommonTree set25_tree=null;

        try {
            // PHPAspectParser.g:63:1: ( PAAMAYIM_NEKUDOTAYIM | OBJECT_OPERATOR )
            // PHPAspectParser.g:
            {
            root_0 = (PHPAspectCommonTree)adaptor.nil();

            set25=(CommonToken)input.LT(1);
            if ( (input.LA(1)>=PAAMAYIM_NEKUDOTAYIM && input.LA(1)<=OBJECT_OPERATOR) ) {
                input.consume();
                adaptor.addChild(root_0, (PHPAspectCommonTree)adaptor.create(set25));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);
